--- a/public/tuiter/explore/challenge_index.html
+++ b/public/tuiter/explore/challenge_index.html
@@ -44,7 +44,8 @@
 			<br>
 		</div>
 
-		<div class="col border-end border-start border-secondary">
+		<div class="col border-end border-start "
+			 style="border-color:rgb(25, 26, 29) !important;">
 			<br>
 		</div>
 
@@ -149,8 +150,8 @@
 		</div>
 
 		<!--	Main Content col-->
-		<div class="col border-end border-start border-secondary"
-			 style="padding-left: 0; padding-right: 0;">
+		<div class="col border-end border-start "
+			 style="border-color:rgb(25, 26, 29) !important;padding-left: 0; padding-right: 0;">
 			<div class="row">
 				<!--	Search-->
 				<div class="col-11 ps-5 pe-4">
@@ -199,7 +200,8 @@
 
 			<!--	Content sec-->
 			<!--	Music Pic-->
-			<div class="position-relative border-top border-bottom border-secondary">
+			<div class="position-relative border-top border-bottom"
+				 style="border-color:rgb(25, 26, 29) !important;">
 				<img src="../../images/bts.jpeg" width="100%">
 				<div class="row">
 					<div class="col-10">
@@ -225,7 +227,7 @@
 			</div>
 			<!--	List of contents-->
 			<ul class="list-group "
-				style="border-top-left-radius: 0px; border-top-right-radius: 0px;">
+				style="border-color:rgb(25, 26, 29) !important;border-top-left-radius: 0px; border-top-right-radius: 0px;">
 				<li class="list-group-item bg-black pt-3 pe-3">
 					<div class="row">
 						<div class=" col-9 col-md-10 ">
@@ -375,7 +377,8 @@
 			<br>
 		</div>
 
-		<div class="col border-end border-start border-secondary">
+		<div class="col border-end border-start "
+			 style="border-color:rgb(25, 26, 29) !important;">
 			<br>
 		</div>
 
