--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -15,7 +15,7 @@
   <div class="wd-grid-wrapper">
     <div class="wd-grid-title wd-boarder" style="border-bottom-color: rgb(110,118,125)">
       <div class="wd-margin-right-left-16px wd-padding-top-bottom-12px">
-        <b style="font-size: 20px">Bookmarks</b>
+        <b style="font-size: 20px; ">Bookmarks</b>
         <br>
         <div style="color: rgb(110,118,125); font-size: 13px">@Webdev</div>
       </div>
