--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,9 +7,9 @@
 <body>
 
 <ul>
-  <li><a href="home.html">Home</a></li>
-  <li><a href="explore/index.html">Explore</a></li>
-  <li><a href="explore/challenge_index.html">Explore(Assignment 4 Challange)</a></li>
+  <li><a href="HomeScreen/index.html">Home</a></li>
+  <li><a href="ExploreScreen/index.html">Explore</a></li>
+  <li><a href="ExploreScreen/challenge_index.html">Explore(Assignment 4 Challange)</a></li>
   <li><a href="notifications.html">Notifications</a></li>
   <li><a href="messages.html">Messages</a></li>
   <li><a href="bookmarks.html">Bookmarks</a></li>
