--- a/public/tuiter/NavigationSidebar/index.html
+++ b/public/tuiter/NavigationSidebar/index.html
@@ -12,8 +12,8 @@
 	<!--	<link href="../../vendors/fontawesome-free-6.2.0-web/css/fontawesome.css" rel="stylesheet">-->
 	<!--	<link href="../../vendors/fontawesome-free-6.2.0-web/css/brands.css" rel="stylesheet">-->
 	<!--	<link href="../../vendors/fontawesome-free-6.2.0-web/css/solid.css" rel="stylesheet">-->
-	<link href="index.css" rel="stylesheet"/>
-	<link href="../index.css" rel="stylesheet"/>
+<!--	<link href="index.css" rel="stylesheet"/>-->
+<!--	<link href="../index.css" rel="stylesheet"/>-->
 </head>
 <body>
 
