--- a/public/index.html
+++ b/public/index.html
@@ -25,28 +25,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>-->
+<!--    <link href="./vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+
+<!--    <script src="https://kit.fontawesome.com/f3905e3342.js" crossorigin="anonymous"></script>-->
   </head>
   <body>
 <!--    <noscript>You need to enable JavaScript to run this app.</noscript>-->
-<!--    <div id="root"></div>-->
-<!--    &lt;!&ndash;-->
-<!--      This HTML file is a template.-->
-<!--      If you open it directly in the browser, you will see an empty page.-->
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-<!--      You can add webfonts, meta tags, or analytics to this file.-->
-<!--      The build step will place the bundled scripts into the <body> tag.-->
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-<!--      To begin the development, run `npm start` or `yarn start`.-->
-<!--      To create a production bundle, use `npm run build` or `yarn build`.-->
-<!--    &ndash;&gt;-->
-<h1>Web Dev Assignments</h1> <ul>
-  <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-  <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
-  <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
-  <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
-  <li><a href="labs/a5/todos/index.html">Assignment 5 ToDos</a></li>
-
-  <li><a href="tuiter/navigation.html">Tuiter</a></li> </ul>
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
 
   </body>
 </html>
