--- a/public/tuiter/_edit-profile.html
+++ b/public/tuiter/_edit-profile.html
@@ -5,10 +5,10 @@
   <title>Edit Profile</title>
 </head>
 <body>
-<a href="navigation.html">Back</a>
+<a href="_navigation.html">Back</a>
 
 <h1>Tuiter</h1> <h2>Edit Profile</h2>
-<a href="profile.html">Save</a>
+<a href="_profile.html">Save</a>
 <br>
 
 <img src="banner.jpg" height="200px" weight="100%"/>
