--- a/public/tuiter/_home.html
+++ b/public/tuiter/_home.html
@@ -5,7 +5,7 @@
   <title>Home</title>
 </head>
 <body>
-<a href="navigation.html">Back</a>
+<a href="_navigation.html">Back</a>
 
 <h1>Tuiter</h1> <h2>Home</h2>
 <img src="bot.jpg" height="48px" weight="48px"/>
@@ -31,7 +31,7 @@
     <br>
 
     <img src="bot.jpg" height="48px" weight="48px"/>
-    <a href="profile.html">Alice</a>
+    <a href="_profile.html">Alice</a>
     @alice - 2h
     <br><br>
 
@@ -50,7 +50,7 @@
     <br>
 
     <img src="bot.jpg" height="48px" weight="48px"/>
-    <a href="profile.html">Wenbo</a>
+    <a href="_profile.html">Wenbo</a>
     @wenbo - 4h
     <br><br>
 
