--- a/public/tuiter/_profile.html
+++ b/public/tuiter/_profile.html
@@ -5,13 +5,13 @@
   <title>Profile</title>
 </head>
 <body>
-<a href="navigation.html">Back</a>
+<a href="_navigation.html">Back</a>
 
 <h1>Tuiter</h1> <h2>Profile</h2>
 <img src="banner.jpg" height="200px" weight="100%"/>
 <br>
 <img src="bot.jpg" height="48px" weight="48px"/>
-<a href="edit-profile.html">Edit profile</a>
+<a href="_edit-profile.html">Edit profile</a>
 <br>
 
 <h2>WebDev</h2>
