--- a/public/tuiter/_navigation.html
+++ b/public/tuiter/_navigation.html
@@ -14,8 +14,8 @@
   <li><a href="messages.html">Messages</a></li>
   <li><a href="bookmarks.html">Bookmarks</a></li>
   <li><a href="lists.html">Lists</a></li>
-  <li><a href="profile.html">Profile</a></li>
-  <li><a href="tuit.html">Tuit</a></li>
+  <li><a href="_profile.html">Profile</a></li>
+  <li><a href="_tuit.html">Tuit</a></li>
   <li><a href="reply.html">Reply</a></li>
 </ul>
 
