--- a/public/tuiter/_tuit.html
+++ b/public/tuiter/_tuit.html
@@ -5,7 +5,7 @@
   <title>Tuit</title>
 </head>
 <body>
-<a href="navigation.html">Back</a>
+<a href="_navigation.html">Back</a>
 
 <h1>Tuiter</h1> <h2>Tuit</h2>
 <img src="bot.jpg" height="48px" weight="48px"/>
